social icons were fixed

--- a/style.css
+++ b/style.css
@@ -1145,9 +1145,10 @@ footer::before {
     top: 100%;
 }
 
-img {
+.social > .link > img {
     height: calc(0.3 * var(--m));
     object-fit: cover;
+    filter: invert(1);
 }
 
 .social {
